objects/BRNSHRK__BrainsharkView__c.object
<CustomObject>
    <description>Tracks views of Brainshark presentations</description>
    <fields>
        <fullName>BRNSHRK__ActivityRecordId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Activity Record Id</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BRNSHRK__Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Brainshark Activity record related to this view</description>
        <label>Activity</label>
        <referenceTo>BRNSHRK__BrainsharkActivity__c</referenceTo>
        <relationshipLabel>Brainshark Views</relationshipLabel>
        <relationshipName>Brainshark_Views</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkViewKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brainshark View Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCompany__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 01</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 03</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookDept__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Dept</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookFirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookLastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookTitle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Invitation__c</fullName>
        <description>The invitation that generated this view</description>
        <label>Invitation</label>
        <referenceTo>BRNSHRK__BrainsharkInvitation__c</referenceTo>
        <relationshipLabel>Brainshark Views</relationshipLabel>
        <relationshipName>Brainshark_Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an internal View?</description>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfSlides__c</fullName>
        <label>Number of Slides</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OpportunityStage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Viewed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentDurationViewed__c</fullName>
        <formula>IF(BRNSHRK__ViewingTime__c &lt;= 0, 0, if(BRNSHRK__Duration__c&lt;=0,0,if(BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c &gt; 1, 1, BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Audio Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentSlidesViewed__c</fullName>
        <formula>IF (BRNSHRK__SlidesViewed__c &lt;= 0,0, IF (BRNSHRK__NumberOfSlides__c &lt;= 0,0, if(BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c &gt; 1, 1, BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Slides Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PointsScored__c</fullName>
        <label>Points Scored</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PossiblePoints__c</fullName>
        <label>Possible Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Score__c</fullName>
        <formula>IF(BRNSHRK__PossiblePoints__c = 0, 0, IF(ISNULL(BRNSHRK__PossiblePoints__c), 0, BRNSHRK__PointsScored__c / BRNSHRK__PossiblePoints__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SlidesViewed__c</fullName>
        <label>Slides Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__TrackingCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressRegion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewSource__c</fullName>
        <description>Source of the internal view. Could be chatter or a tab in the Brainshark pagelets.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>View Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewingTime__c</fullName>
        <label>Viewing Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Minutes__c</fullName>
        <formula>FLOOR( BRNSHRK__ViewingTime__c / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Seconds__c</fullName>
        <formula>BRNSHRK__ViewingTime__c  - BRNSHRK__Viewing_Minutes__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Time_MM_SS__c</fullName>
        <formula>&quot;Minutes:&quot; &amp; Text(BRNSHRK__Viewing_Minutes__c) &amp; &quot; Seconds:&quot; &amp; Text(BRNSHRK__Viewing_Seconds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Time MM:SS</label>
        <type>Text</type>
    </fields>
    <label>Brainshark View</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Viewed</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brainshark Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>